add CORS support

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# TEMPORARY: running on localhost
+# TEMPORARY: running on localhost, will change to PI
 spring.datasource.url=jdbc:mysql://localhost:3306/api_db?useLegacyDatetimeCode=false&serverTimezone=UTC
 #spring.datasource.url=jdbc:mysql://coms-309-vb-07.cs.iastate.edu:3306/api_db?useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
